--- a/client/src/components/Calender/CalendarV.scss
+++ b/client/src/components/Calender/CalendarV.scss
@@ -2,13 +2,27 @@
     position: absolute;
     top: 300px;
     right: 970px;
-
     width: 350px;
-    
-    background-color: white;
+    background: white;
     border-radius: 7px;
     padding: 1%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.calendar-containerDarkMode .react-calendar{
+  background: #313131;
+  position: absolute;
+  top: 300px;
+  right: 970px;
+  width: 350px;
+  border-radius: 7px;
+  padding: 1%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  
+}
+
+.calendar-containerDarkMode button {
+  color: #104981;
 }
 
 .react-calendar {
