--- a/client/src/components/Charts/Chart.scss
+++ b/client/src/components/Charts/Chart.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+
 .chart-container {
     position: absolute;
     top: 250px;
@@ -6,4 +8,16 @@
     background-color: white;
     border-radius: 7px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-family: 'Lato';
+}
+
+.chart-containerDarkMode {
+    background-color: #313131;
+    position: absolute;
+    top: 250px;
+    right: 30px;
+    width: 350px;
+    border-radius: 7px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-family: 'Lato';
 }
