--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* min-height: 100vh; */
   margin: 0;
   font-family: 'Lato', sans-serif;
 }
@@ -58,11 +57,13 @@ body {
 
 .darkModeBody {
   background-color: #1E1E1E;
-  height: 1214px;
+  position: relative;
+  min-height: 900px; 
 }
 
 .lightModeBody {
-  height: 1214px;
+  position: relative;
+  min-height: 900px;
 }
 
 .darkModeBody h1 {
@@ -185,19 +186,18 @@ body {
 .Footer {
   position: relative;
   bottom: 0;
-  left: 0;
+  width: 100%;
   width: 1348px;
   text-align: center;
-  margin-top: 230px;
+  margin-top: 120px;
   font-family: Lato;
-  font-weight: 400;
+  font-weight: 500;
   border-top: 1px solid rgba(34, 36, 38, 0.5);
-  vertical-align: middle;
-  height: 3em;
+  height: 3.4em;
 }
 
 .Footer p {
-  margin-top: 28px;
+  margin-top: 25px;
   display: inline-block;
 }
 
@@ -228,12 +228,12 @@ body {
   width: 100%;
   width: 1348px;
   text-align: center;
-  margin-top: 230px;
+  margin-top: 120px;
   font-family: Lato;
-  font-weight: 400;
+  font-weight: 300;
   border-top: 1px solid rgba(227, 227, 227, 0.1);
   vertical-align: middle;
-  height: 3em;
+  height: 3.4em;
 }
 
 .darkFooter p {
